--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@microsoft/signalr": "^5.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@microsoft/signalr": "7.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,12 +35,12 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "react-scripts": "4.0.1"
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jest": "29.2.4",
+    "@types/node": "18.11.11",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "react-scripts": "5.0.1"
   }
 }
