--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@microsoft/signalr": "7.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^4.0.3",
-    "web-vitals": "3.1.0"
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,9 +38,9 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "29.2.4",
-    "@types/node": "18.11.11",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "react-scripts": "5.0.1"
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "react-scripts": "^5.0.1"
   }
 }
