--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -6,8 +6,8 @@
     "@microsoft/signalr": "7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.0.3",
-    "web-vitals": "^3.1.0"
+    "typescript": "^5.7.2",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,10 +34,10 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/jest": "29.2.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
